# prt3

./: .gitignore  CMakeLists.txt  README.md
lib/assimp/: Makefile  assimp.pc  cmake_install.cmake  cmake_uninstall.cmake  revision.h
lib/assimp/code/: CMakeLists.txt  Makefile  cmake_install.cmake
lib/assimp/test/: Makefile  cmake_install.cmake
lib/glm/: glm.pc
lib/hash-library/: crc32.cpp
lib/imgui-filebrowser/: ImGuiFileBrowser.cpp  ImGuiFileBrowser.h
lib/imgui-filebrowser/Dirent/: dirent.h
lib/imgui/backends/: imgui_impl_glfw.cpp
lib/minivorbis/: minivorbis.h
resources/: index.html  run.py
resources/assets/gui/: atlas.fpmd
resources/assets/prefabs/: bell.prefab  camera.prefab  cool_turkey.prefab  fire_rock.prefab  fire_rock_explosion.prefab  flame_pillar.prefab  player.prefab  player.prefab_old  stranger_sword.prefab  wraith.prefab  wraith_sword.prefab
resources/assets/projects/: proj.prj
resources/assets/scenes/: scene.prt3  scene2.prt3
resources/inactive_assets/character/: character.afphoto  character.fbx
resources/inactive_assets/corner/: building.blend1  building.fbx  facade_albedo.afphoto
resources/inactive_assets/defunct_map/: map.fbx  mossy_wall.afphoto  tilesheet0.afphoto
resources/inactive_assets/example/: motorbike.blend  motorbike.blend1
resources/inactive_assets/house/: house.blend  house.blend1  house.fbx  wooden_panel.afphoto  wooden_panel_2.afphoto
resources/inactive_assets/moon_island/: cobble_stone.afphoto  moon_island.blend  moon_island.fbx
resources/source_assets/boss0/: boss0.afphoto  boss0.blend  boss0.blend1  boss0.fbx
resources/source_assets/boss1/: boss1.afphoto  boss1.blend  boss1.blend1  boss1.fbx  wraith_sword.blend1  wraith_sword.fbx
resources/source_assets/maze/: demon_icon.afphoto  maze.blend  maze.blend1  maze.fbx
resources/source_assets/parish/: bell.blend1  bell.fbx  clock_tower.blend  clock_tower.blend1  clock_tower.fbx  parish_main.blend  parish_main.blend1  parish_main.fbx  stairwell.blend  stairwell.blend1
resources/source_assets/stranger/: sheath.blend  sheath.fbx  stranger.afphoto  stranger.blend  stranger.blend1  stranger.fbx  sword.blend
resources/source_assets/test_room/: test_room.blend  test_room.dae
src/backend/: render_backend.h
src/backend/dummy/: dummy_renderer.cpp  dummy_renderer.h
src/backend/opengl/: gl_material.h  gl_material_manager.cpp  gl_material_manager.h  gl_mesh.cpp  gl_mesh.h  gl_model_manager.cpp  gl_model_manager.h  gl_postprocessing_chain.cpp  gl_postprocessing_chain.h  gl_postprocessing_pass.cpp  gl_postprocessing_pass.h  gl_renderer.cpp  gl_renderer.h  gl_shader.cpp  gl_shader.h  gl_shader_utility.cpp  gl_shader_utility.h  gl_source_buffers.cpp  gl_source_buffers.h  gl_texture_manager.cpp  gl_texture_manager.h  gl_utility.cpp  gl_utility.h
src/daedalus/character/: character_controller.cpp  character_controller.h  player_controller.cpp  player_controller.h
src/daedalus/game_state/: game_state.cpp  game_state.h  game_time.h  id.h  item_db.cpp  item_db.h  object_db.cpp  object_db.h  prefab_db.cpp  prefab_db.h  sound_pool.cpp  sound_pool.h
src/daedalus/gui/: game_gui.cpp  game_gui.h  strings.cpp  strings.h
src/daedalus/input_mapping/: input_mapping.h
src/daedalus/map/: map.cpp  map.h
src/daedalus/npc/: npc_action.cpp  npc_action.h  npc_controller.cpp  npc_controller.h  npc_db.cpp  npc_db.h  npcs.cpp  npcs.h
src/daedalus/objects/: interactable.cpp  interactable.h  slide.cpp  slide.h
src/driver/: render_backend.h
src/driver/opengl/: gl_framebuffer.cpp  gl_framebuffer.h  gl_material.cpp  gl_material.h  gl_material_manager.cpp  gl_material_manager.h  gl_mesh.cpp  gl_mesh.h  gl_model_manager.cpp  gl_model_manager.h  gl_postprocessing_chain.cpp  gl_postprocessing_chain.h  gl_postprocessing_pass.cpp  gl_postprocessing_pass.h  gl_renderer.cpp  gl_renderer.h  gl_shader.cpp  gl_shader.h  gl_shader_utility.cpp  gl_shader_utility.h  gl_source_buffers.cpp  gl_source_buffers.h  gl_texture.h  gl_texture_manager.cpp  gl_texture_manager.h  gl_utility.cpp  gl_utility.h
src/engine/animation/: animation.h  animation_system.cpp  animation_system.h
src/engine/audio/: audio_manager.cpp  audio_manager.h  audio_mem_util.cpp  audio_mem_util.h
src/engine/component/: PointLight.h  animated_mesh.cpp  animated_mesh.h  animated_model.cpp  animated_model.h  armature.cpp  armature.h  collider_component.cpp  collider_component.h  component.h  component_manager.cpp  component_manager.h  component_utility.cpp  component_utility.h  decal.cpp  decal.h  door.cpp  door.h  material.cpp  material.h  mesh.cpp  mesh.h  model.cpp  model.h  navigation_mesh.cpp  navigation_mesh.h  particle_system.cpp  particle_system.h  point_light.cpp  point_light.h  script_set.cpp  script_set.h  sound_source.cpp  sound_source.h  transform.h  weapon.cpp  weapon.h
src/engine/core/: backend_type.h  context.cpp  context.h  engine.cpp  engine.h  input.cpp  input.h
src/engine/editor/: editor.cpp  editor.h  editor_camera.cpp  editor_camera.h  editor_context.cpp  editor_context.h
src/engine/geometry/: shapes.cpp  shapes.h
src/engine/navigation/: navigation_system.cpp  navigation_system.h
src/engine/physics/: aabb.cpp  aabb.h  aabb_tree.cpp  aabb_tree.h  collider.cpp  collider.h  collider_container.h  collider_tag.h  gjk.cpp  gjk.h  physics_system.cpp  physics_system.h  support.cpp  support.h
src/engine/project/: project.cpp  project.h
src/engine/rendering/: camera.cpp  camera.h  light.h  material.h  material_manager.cpp  material_manager.h  model.cpp  model.h  model_manager.cpp  model_manager.h  postprocessing_chain.h  postprocessing_pass.h  render_data.h  renderer.cpp  renderer.h  (+5 more)
src/main/: args.h  main.cpp
src/util/: checksum.cpp  checksum.h  file_util.cpp  file_util.h  fixed_string.h  geometry_util.cpp  geometry_util.h  hash_util.h  log.h  lru_cache.h  math_util.h  mem.h  mesh_util.cpp  mesh_util.h  random.h  ring_buffer.h  serialization.cpp  serialization.h  serialization_util.h  sub_vec.h  template_util.h  uuid.h
tools/font_packer/: CMakeLists.txt
tools/font_packer/src/: main.c
(+233 files in other folders)
